--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,7 @@
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
 
-  --background-image-hero-banner: url("/hero-banner.jpg");
+  --background-image-hero-banner: url("/hero-example.jpg");
 
   --animate-shine: shine var(--duration) infinite linear;
   @keyframes shine {
@@ -61,7 +61,24 @@
     background-position: 0% 0%;
     }
   }
-}
+  --animate-aurora: aurora 8s ease-in-out infinite alternate
+;
+  @keyframes aurora {
+  0% {
+    background-position: 0% 50%;
+    transform: rotate(-5deg) scale(0.9);}
+  25% {
+    background-position: 50% 100%;
+    transform: rotate(5deg) scale(1.1);}
+  50% {
+    background-position: 100% 50%;
+    transform: rotate(-3deg) scale(0.95);}
+  75% {
+    background-position: 50% 0%;
+    transform: rotate(3deg) scale(1.05);}
+  100% {
+    background-position: 0% 50%;
+    transform: rotate(-5deg) scale(0.9);}}}
 
 :root {
   --radius: 0.625rem;
